--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # requirements.txt (클라우드 배포용)
-streamlit==1.28.0
-langchain==0.1.0
-langchain-community==0.0.20
-langchain-openai==0.1.0
-faiss-cpu==1.7.4
-pypdf==4.0.1
-openai==1.3.0
-python-dotenv==1.0.0
+streamlit>=1.28.0
+langchain>=0.1.0
+langchain-community>=0.0.20
+langchain-openai>=0.1.0
+faiss-cpu>=1.7.4
+pypdf>=4.0.1
+openai>=1.3.0
+python-dotenv>=1.0.0
+
